[package]
name = "learning2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.28.2"
nostr-sdk = { version = "0.23.0", features = ["nip03"] }
reqwest = "0.11.20"
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
