[package]
name = "rasun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.29.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
nostr-sdk = { version = "0.29.0"}
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
